# NPU-PIM-simulator

./: LICENSE  README.md
DRAMsim3/: 0001-HSIM-integration.patch  CMakeLists.txt  Makefile  controller copy.h  dramsim3.json  dramsim3.txt  dramsim3epoch.json
DRAMsim3/configs/: GDDR6_8Gb_x16.ini  LPDDR4_8Gb_x16_2400.ini
DRAMsim3/src/: bridge.cc  bridge.h  command_queue.cc  configuration.cc  configuration.h  controller.cc  cpu.h  dram_system.cc  memory_system.cc  (+3 more)
MIDAPSim/: MIDAPOpCoverage.md  config.py  generate_golden_data.sh  generate_microcode.sh  generate_microcode_without_gold.sh  requirements.txt  run_from_file.py  system_test_wrapper.py  test.ipynb  test_generator.ipynb  verify_microcode.sh
hsim/: CMakeLists.txt  sc_main.cpp
hsim/components/: Top.h  arbiter.cpp  arbiter.h  host.cpp  host.h  mem_wrapper.cpp  mem_wrapper.h  midap_wrapper.cpp  midap_wrapper.h  pim_wrapper.cpp  pim_wrapper.h  trace_generator.cpp  trace_generator.h
hsim/configs/: compiler.json  memory.json  system.json
hsim/configs/profile/: LPDDR5.json  LPDDR5_1024.json  LPDDR5_1024_9b.json  LPDDR5_512.json  host.json
hsim/configs/profile/llama/: LPDDR5_1024.json
hsim/configs/profile/qwen/: LPDDR5_1024.json
hsim/configs/profile/qwen0_5b/: LPDDR5.json
hsim/configs/profile/qwen7b/: LPDDR5_1024.json
hsim/scenarios/: baseline.cpp  baseline.h
hsim/scenarios/gemma2_2b/partitioned/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h  s4.cpp  s4.h
hsim/scenarios/gemma2_2b/unified/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h  s4.cpp  s4.h
hsim/scenarios/gemma2_9b/partitioned/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/gemma2_9b/unified/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/llama3_2_3b/: baseline.cpp  baseline.h
hsim/scenarios/llama3_2_3b/partitioned/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/llama3_2_3b/unified/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/qwen2_5_0_5b/: test.cpp  test.h
hsim/scenarios/qwen2_5_3b/: baseline.cpp  baseline.h
hsim/scenarios/qwen2_5_3b/partitioned/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/qwen2_5_3b/unified/: s1.cpp  s1.h  s2.cpp  s2.h  s3.cpp  s3.h
hsim/scenarios/qwen2_5_7b/: baseline.cpp  baseline.h
hsim/scenarios/qwen2_5_7b/partitioned/: s1.cpp  s1.h
hsim/scenarios/qwen2_5_7b/unified/: s2.cpp  s2.h
hsim/utilities/: common.h  configurations.cpp  configurations.h  hsim_packet.h  logger.cpp  logger.h  mm.cpp  packet_buffer.cpp  packet_buffer.h  shmem_communicator.cpp  shmem_communicator.h  sync_object.h
shared/: .args.shmem.dat_1
(+219 files in other folders)
